tests/errors/mismatched-shape-additive/extra.wit
@thing
  - kind: 42
  - colour: "blue"
thing@
